Add eventListeners to numbers and operators

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Calculator</title>
 </head>
 
@@ -18,7 +18,7 @@
         </div>
         <div class="calc-buttons">
             <button type="button" id="plus-minus">+/-</button>
-            <button type="button" class="operator" id="exponent">^</button>
+            <button type="button" class="operator" value=** id="exponent">^</button>
             <button type="button" id="delete">del</button>
             <button type="button" id="clear">clear</button>
 
@@ -39,8 +39,8 @@
 
             <button type="button" class="number" value=0 id="zero">0</button>
             <button type="button" id="decimal" value=.>.</button>
-            <button type="button" id="equals" value==>=</button>
-            <button type="button" class="operator" id="add">+</button>
+            <button type="button" value='=' id="equals">=</button>
+            <button type="button" class="operator" value=+ id="add">+</button>
         </div>
     </div>
     <script type="text/javascript" src="javascript.js"></script>
