Add plus/minus and clear functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div id="lower-display"></div>
         </div>
         <div class="calc-buttons">
-            <button type="button" id="plus-minus">+/-</button>
+            <button type="button" id="negative">+/-</button>
             <button type="button" class="operator" value=** id="exponent">^</button>
             <button type="button" id="delete">del</button>
             <button type="button" id="clear">clear</button>
