--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 
 <body>
     <div class="wrapper">
-        <div class="display">
-            <div id="upper-display"></div>
-            <div id="lower-display"></div>
-        </div>
+        <div class="display" id='display'></div>
         <div class="calc-buttons">
             <button type="button" id="negative">+/-</button>
             <button type="button" class="operator" value=** id="exponent">^</button>
